# T-PBS

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  generate_signing_keys.sh
client/: .gitignore  Makefile  buildenv.mk  script.sh
client/AppInitiator/: App.cpp  AppInitiator.cpp  AppInitiator.h  GWAS.cpp  GWAS.h  Makefile  UntrustedEnclaveMessageExchange.cpp  UntrustedEnclaveMessageExchange.h
client/EnclaveExecutor/: EnclaveExecutor.config.xml  EnclaveExecutor.cpp  EnclaveExecutor.edl  EnclaveMessageExchange.cpp  EnclaveMessageExchange.h  GWAS.cpp  GWAS.h  Makefile  Utility_E3.cpp  Utility_E3.h  datatypes.h  tdcap_dh.cpp  tdcap_dh.h
client/EnclaveInitiator/: EnclaveInitiator.config.xml  EnclaveInitiator.cpp  EnclaveInitiator.edl  EnclaveMessageExchange.cpp  EnclaveMessageExchange.h  Makefile  Utility_E1.cpp  Utility_E1.h  datatypes.h  tdcap_dh.cpp
client/Include/: benchmark.h  config.h  datatypes.h  error_codes.h  fifo_def.h
client/util/: config.cpp  fifo.cpp
k8s/: expire-la-deployment-fixed.yaml  pccs-config-configmap.yaml  pccs-tls-secret.template.yaml  pccs-tls.crt  pccs-tls.key  sgx-aesmd.yaml  sgx-attestation-conf-configmap.yaml  t-pbs-deployment.yaml
server/: .gitignore  Makefile  buildenv.mk  script.sh
server/AppResponder/: App.cpp  CPServer.cpp  CPServer.h  CPTask.cpp  CPTask.h  Makefile  Queue.h  Scheduler.cpp  Scheduler.h  Thread.cpp  Thread.h  UntrustedEnclaveMessageExchange.cpp  UntrustedEnclaveMessageExchange.h  ecdsa_ocalls.h
server/EnclaveResponder/: EnclaveMessageExchange.cpp  EnclaveMessageExchange.h  EnclaveResponder.config.xml  EnclaveResponder.cpp  EnclaveResponder.edl  LRU_Buffer.cpp  LRU_Buffer.h  Makefile  Utility_E2.cpp  Utility_E2.h  datatypes.h  debug.config.xml  debug_config.xml  ecp.cpp  ecp_interface.h  metadata_minimal.txt  sgx_dh_internal.h  tdcap_dh.cpp  tdcap_dh.h
server/Include/: common.h  datatypes.h  dcap_dh_def.h  dh_session_protocol.h  error_codes.h  fifo_def.h
server/util/: config.cpp  fifo.cpp
user/: Makefile  buildenv.mk  script.sh
user/util/: config.cpp  (+1 more)
(+69 files in other folders)
